# presentations

./: .dir-locals.el  .gitignore
.github/workflows/: deno.yml
.zed/: settings.json
2025-act-clocksystems/: deno.json
2025-act-clocksystems/resources/: plist2json.py
2025-act-clocksystems/src/: citeproc.cjs  main.ts  slides.tsx  util.tsx
2025-act-clocksystems/static/: slides.css  slides.js
2025-aria-ta1-seminar/: config.toml
2025-aria-ta1-seminar/src/: slide.html  slides.dj
2025-aria-ta1-seminar/static/: main.css
2025-aspire-nijmegen-intro/: config.toml
2025-aspire-nijmegen-intro/src/: slide.html  slides.dj
2025-aspire-nijmegen-intro/static/: main.css
2025-berkeley-seminar-substrate-and-laws/: config.toml
2025-berkeley-seminar-substrate-and-laws/src/: slide.html  slides.dj
2025-berkeley-seminar-substrate-and-laws/static/: main.js
2025-puddle-universes/: deno.json
2025-puddle-universes/src/: en-US.xml  main.ts  ocaml.json  universes.tsx
deck/: Cargo.toml
deck/src/: main.rs
sliders/: Cargo.toml
sliders/resources/: refresh.js
sliders/src/: main.rs
src/: main.ts  tsx.ts  universes.tsx  util.tsx
static/: universes.css
