[package]
name = "deck"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "macros"] }
clap = { version = "4.5.48", features = ["derive"] }
futures-util = "0.3.31"
jotdown = "0.8.1"
log = "0.4.28"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.226", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.9.7"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
webbrowser = "1.0.5"
